//
// Copyright 2023 Stacklok, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
//WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package mediator.v1;
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/stacklok/mediator/pkg/generated/protobuf/go";

message CreateOrganisationRequest {
  string name = 1;
  string company = 2;
}

message CreateOrganisationResponse {
  int32 id = 1;
  string name = 2;
  string company = 3;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;    
}

// manage Organisations CRUD
service OrganisationService {
  rpc CreateOrganisation (CreateOrganisationRequest) returns (CreateOrganisationResponse) {
      option (google.api.http) = {
          post: "/api/v1/organisation"
          body: "*"
      };
  }
}